fixed cutoff bottom nav with GetAppBanner

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@ header .nav-wrapper {
   -webkit-font-smoothing: antialiased;
   background-color: #f9f9f9;
   width: 100%;
-  z-index: 2;
+  z-index: 4;
   position: fixed;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
   left: 0;
